[tool.poetry]
name = "log"
version = "0.1.0"
description = ""
authors = ["Lucifer516-sudoer <harishvengatachalam02092005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.8.2"
rich = "^13.7.1"
platformdirs = "^4.2.2"
flet = "^0.24.1"
cython = "^3.0.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
